--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/bulbasaur-HRR17/bulbasaur-HRR17#readme",
   "dependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
