--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel client/components --out-dir client/compiled/components --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,10 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "body-parser": "^1.15.2",
+    "bower": "^1.7.9",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
+    "nodemon": "^1.9.2",
     "serve-static": "^1.11.1"
   }
 }
