chore - add postinstall in package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel client/components --out-dir client/compiled/components --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
+    "start": "babel client/components --out-dir client/compiled/components --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
