--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
     "bower": "^1.7.9",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-shell": "^1.3.0",
     "nodemon": "^1.9.2",
     "serve-static": "^1.11.1"
   }
