--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-partials": "^0.3.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
