--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-shell": "^1.3.0",
     "nodemon": "^1.9.2",
+    "react": "^15.2.1",
     "react-dropzone": "^3.5.3",
     "serve-static": "^1.11.1"
   },
