--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "grunt build",
-    "postinstall": "bower install & npm start"
+    "postinstall": "npm start"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "grunt-shell": "^1.3.0",
     "nodemon": "^1.9.2",
     "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "react-dropzone": "^3.5.3",
     "serve-static": "^1.11.1"
   },
