--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-shell": "^1.3.0",
+    "mongoose": "^4.5.5",
     "nodemon": "^1.9.2",
     "serve-static": "^1.11.1"
   },
