--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-dropzone": "^3.5.3",
-    "serve-static": "^1.11.1"
+    "serve-static": "^1.11.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
