--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "grunt build",
-    "postinstall": "npm start"
+    "postinstall": "bower install && npm start"
   },
   "repository": {
     "type": "git",
