--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "particles.js": "^2.0.0",
     "bootstrap": "^3.3.6",
-    "jquery": "2.2.4"
+    "jquery": "2.2.4",
+    "d3": "^4.1.1"
   }
 }
