--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
+    "bower": "^1.7.9",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
     "grunt": "^1.0.1",
