--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
+    "d3": "3.5.6",
+    "dimple-js": "^2.1.4",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
     "grunt": "^1.0.1",
