--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "bower": "^1.7.9",
     "d3": "3.5.6",
     "dimple-js": "^2.1.4",
+    "bower": "^1.7.9",
+    "d3": "3.5.6",
+    "dimple-js": "^2.1.4",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
     "grunt": "^1.0.1",
