--- a/package.json
+++ b/package.json
@@ -34,9 +34,6 @@
     "bower": "^1.7.9",
     "d3": "3.5.6",
     "dimple-js": "^2.1.4",
-    "bower": "^1.7.9",
-    "d3": "3.5.6",
-    "dimple-js": "^2.1.4",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
     "grunt": "^1.0.1",
@@ -46,6 +43,7 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-shell": "^1.3.0",
+    "jquery": "^3.1.0",
     "mongoose": "^4.5.5",
     "nodemon": "^1.9.2",
     "react": "^15.2.1",
