--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "d3": "3.5.6",
