--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dimple-js": "^2.1.4",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
+    "express-session": "^1.14.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
